# rhiz

./: .gitignore  Cargo.toml  LICENSE  LICENSE-parity.txt  README.md  Rhizfile
src/: ast.rs  compiler.rs  executor.rs  functions.rs  lib.rs  parser.rs  rhiz.pest
tests/: Rhizfile  test_basic.rs  test_delete_files.rs
