[package]
name = "rhiz"
version = "0.1.0"
authors = ["Nat Knight <nathaniel.ep@gmail.com>"]
edition = "2018"

[features]
default = ["glob"]

[dependencies]
pest = "2.0"
pest_derive = "2.0"
glob = {version = "*", optional = true}

[[bin]]
name = "rhiz"
path = "src/bin/main.rs"
doc = false
test = true
required-features = ["glob"]
