[package]
name = "rhiz"
version = "0.2.0"
authors = ["Nat Knight <nathaniel.ep@gmail.com>"]
edition = "2018"
description = "A deliberately minimal cross-platform task runner."
license = "MIT"
readme = "README.md"
repository = "https://bitbucket.org/nathanielknight/rhiz/"
homepage = "https://bitbucket.org/nathanielknight/rhiz/"
documentation = "https://bitbucket.org/nathanielknight/rhiz/"
keywords = ["tool", "task", "windows", "linux"]
categories = ["command-line-utilities", "development-tools::build-utils"]
exclude = ["Rhizfile"]


[features]
default = ["glob"]  

[dependencies]
pest = "^2.0"
pest_derive = "^2.0"
glob = {version = "^0.2", optional = true}

[[bin]]
name = "rhiz"
path = "src/bin/main.rs"
doc = false
test = true
required-features = ["glob"]


[badges]
maintenance = {status = "experimental"}
