[package]
name = "rhiz"
version = "0.5.0"
authors = [
    "Nat Knight <nathaniel.ep@gmail.com>",
    "Dorian Scheidt <dorian.scheidt@gmail.com>",
]
edition = "2018"
description = "A deliberately minimal task runner."
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://bitbucket.org/nathanielknight/rhiz/"
homepage = "https://bitbucket.org/nathanielknight/rhiz/"
documentation = "https://bitbucket.org/nathanielknight/rhiz/"
keywords = ["tool", "task", "windows", "linux"]
categories = ["command-line-utilities", "development-tools::build-utils"]
exclude = ["Rhizfile"]


[features]
default = ["glob"]

[dependencies]
pest = "^2.0"
pest_derive = "^2.0"
glob = {version = "^0.2", optional = true}
rayon = "1.0"

[[bin]]
name = "rhiz"
path = "src/bin/main.rs"
doc = false
test = true
required-features = ["glob"]


[badges]
maintenance = {status = "experimental"}
